fixed issue with namespacing

--- a/test/dummy/app/assets/stylesheets/application.css
+++ b/test/dummy/app/assets/stylesheets/application.css
@@ -22,13 +22,13 @@ table td {
 }
 
 .nav {
-	padding: 0 0 20px 30px;
+	padding: 10px 0 20px 30px;
 	width: 20%;
 	background-color: #EEE;
 }
 
 .content {
-	padding: 0 0 20px 30px;
+	padding: 10px 0 20px 30px;
 	background-color: #DDD;
 }
 
